# brewster

./: .gdbinit  .gitignore  ARCHITECTURE.md  Cargo.toml  Embed.toml  LICENSE  README.md  USB_JTAG_DEBUGGING.md  build-openocd.sh  build.rs  build.sh  config.local.toml.example  diagram.json  esp_usb_jtag_custom.cfg  openocd-alt-ftdi.cfg  openocd-workaround.cfg  openocd.cfg  partitions.csv  wokwi.toml
.cargo/: config.local.toml.example  config.toml
scripts/: openocd-esp32s3-debug.sh
server/: Cargo.toml  README.md
server/.cargo/: config.toml
server/src/: discovery.rs  http.rs  main.rs  packet.rs  persist.rs  store.rs  udp.rs
src/: lib.rs
src/firmware/: config.rs  controller.rs  error.rs  metrics.rs  mod.rs  network.rs  profile.rs  sensor.rs  shared.rs  status.rs  storage.rs
src/firmware/network/: http.rs  mdns.rs  ntp.rs  udp.rs  wifi.rs
web/: api.js  api.ts  charts.js  charts.ts  dashboard.js  dashboard.ts  index.html  ui.js  ui.ts
