[package]
edition      = "2024"
license      = "BSD-3-Clause"
name         = "brewster"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "brewster"
path = "./src/bin/main.rs"
test = false
bench = false

[dependencies]
embassy-net = { version = "0.7.1", features = ["dhcpv4", "dhcpv4-hostname", "medium-ethernet", "multicast", "proto-ipv4", "tcp", "udp"] }

esp-hal = { version = "~1.0", features = ["esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = ["embassy", "esp-radio", "esp32s3"] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

embassy-executor = { version = "0.9.1", features = [] }
embassy-time     = "0.5.0"

critical-section = "1.2.0"
embedded-storage = "0.3.1"
embedded-hal     = "1.0.0"
esp-alloc        = "0.9.0"
esp-backtrace    = { version = "0.17.0", features = ["esp32s3", "panic-handler", "println"] }
esp-storage      = { version = "0.8.1", features = ["esp32s3"] }
esp-println      = { version = "0.15.0", default-features = false, features = ["critical-section", "esp32s3", "jtag-serial"] }
esp-radio        = { version = "0.17.0", features = ["esp32s3", "wifi", "unstable"] }
heapless         = "0.8.0"
pid              = { version = "4.0.0", default-features = false }
static_cell      = "2.1.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
