[package]
name = "brewster-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "brewster-server"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum        = "0.7"
tower       = "0.4"
tower-http  = { version = "0.5", features = ["fs", "cors", "set-header"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
chrono      = { version = "0.4", features = ["serde"] }
tracing                 = "0.1"
tracing-subscriber      = { version = "0.3", features = ["env-filter"] }
reqwest                 = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
